# computational-intelligence-techniques

./: .gitignore  README.md
cit-notes/: Optymalizacja diety - badania.md
cit-notes/.obsidian/: workspace.json
diet_planning_opitimisation/: Cargo.toml
diet_planning_opitimisation/src/: ant_colony.rs  dish.rs  dynamic_selector.rs  genetic_algorithm.rs  inversion_mutator.rs  main.rs
