[package]
name = "diet_planning_opitimisation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
genevo = { version = "0.7", features = ["smallvec"] }
smallvec = { version = "1.11.1", features = [] }
rand = { version = "0.8.5", features = [] }
plotters = "0.3.5"
rayon = "1.8.0"
plotly = "0.8.4"
